Layout issue on the select attributes page

--- a/twisa-frontend/twisa-app/src/app/select-attributes/select-attributes.component.css
+++ b/twisa-frontend/twisa-app/src/app/select-attributes/select-attributes.component.css
@@ -4,7 +4,7 @@ li {
     height: 70px;
 }
 
-li img {
+.attributeBox li img {
     width: 50px;
 }
 
